# PA_Expunger

./: .gitignore  CONTRIBUTING.md  Debugging Parser.md  Dockerfile  README.md  api.md  docker-compose.yml
.github/: pull_request_template.md
init/: init.sh  (+3 more)
platform/docket_parser/: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
platform/docket_parser/.pytest_cache/v/cache/: nodeids
platform/docket_parser/docket_parser/: __main__.py  core.py  docket_grammar_rules.ppeg  extraction.py
platform/docket_parser/docket_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
platform/docket_parser/src/docket_parser/: Anonymization.md  Docket_Parser_CLI.md  Overview.md  Text extraction.md  __init__.py  __main__.py  anonymize.py  core.py  docket_grammar.ppeg  extraction.py  font.py  parsing.py
platform/docket_parser/src/docket_parser/tests/: __init__.py  test_anonymize.py  test_extraction.py  test_parser.py  test_parsing.py
platform/docket_parser/src/docket_parser/tests/data/court_summaries/extracted/: anon_adjudicated.txt  anon_all_archived.txt  anon_inactive.txt  anon_montco_header.txt  anon_multiple_categories.txt  anon_multiple_counties.txt  anon_publicly-available.txt  anon_special_pagebreak.txt
platform/docket_parser/src/docket_parser/tests/data/court_summaries/page_break/: .gitignore  anon_adjudicated-no-page-break.txt  anon_all_archived-no-page-break.txt  anon_inactive-no-page-break.txt  anon_montco_header-no-page-break.txt  anon_multiple_categories-no-page-break.txt  anon_multiple_counties-no-page-break.txt  anon_publicly-available-no-page-break.txt  anon_special_pagebreak-no-page-break.txt
platform/docket_parser/src/docket_parser/tests/data/dockets/extracted/: anon_2023-docket.txt  anon_cross_court_example.txt  anon_event_without_charges.txt  anon_merge-cp-01.txt  anon_merge-cp-02.txt  anon_merge-mc-01.txt  anon_merge-mc-02.txt  anon_multiline-offense-disposition.txt
(+98 files in other folders)
